--- a/web-animate/web-oneyuanduoquan.html
+++ b/web-animate/web-oneyuanduoquan.html
@@ -22,21 +22,15 @@
               <!--页面的字体，暂时引用网易。-->    
 		<div class="g-part">
 			<div class="g-part-wrap">
-				<i class="bg s1-top" style="display: inline;"></i>
 				<p class="g-part-title g-part-title1" style="display: block;"><em>1</em><span class="g-part-title-b">元商品</span><span class="g-part-title-c">任意挑选</span></p>
-				<i class="bg g-part-des1"></i>
 
 				<p class="g-part-title g-part-title2"><em>1</em>元拿下<span>尽在掌握</span></p>
-				<i class="bg g-part-des2"></i>
 
 				<p class="g-part-title g-part-title3"><em>1</em>看就懂<span>简单明了</span></p>
-				<i class="bg g-part-des3"></i>
 
 				<p class="g-part-title g-part-title4"><em>1</em>触即发<span>刻不容缓</span></p>
-				<i class="bg g-part-des4"></i>
 
 				<p class="g-part-title g-part-title5"><span>立即开启</span><em>1</em>元夺宝</p>
-				<i class="bg g-part-des5"></i>
 			</div>
 		</div>
 	    
@@ -64,7 +58,7 @@
 				<img src="img/p1-phone.png" alt="" width="307" height="620" class="s1-phone"/>
 				<i class="s1-zs"></i>
 				<i class="s1-kh"></i>
-				<i class="s1-finger"></i>
+				<i class="s1-finger"></i>		
 			</div>
 		</div>
 		
@@ -75,215 +69,42 @@
 				<div style="overflow: hidden;height: 775px;position:relative;">
 					<div class="g-wrap">
 						<img src="img/p2-phone.png" alt="" class="s2-phone"/>
-						<i class="s2Car"></i>
 						<i class="s2Card"></i>
+						<i class="s2Car"></i>					
 						<i class="s2Phone"></i>
 						<i class="s2Ipad"></i>
+						<i class="s2-camera"></i>
+						<i class="s2-pc"></i>
 					</div>
 				</div>
 
 				<div class="g-top"></div>
 			</div>
 
+			<!--第三个页面-->
 			<div class="section s3">
 				<div style="height: 787px;overflow:hidden;">
 					<div class="g-wrap" style="z-index: 100;">
-
-						<img src="一元夺宝APP_files/s3-phone.jpg" alt="" width="277" height="570" class="s3Phone">
-						<i class="bg s3Finger"></i>
-						<img src="一元夺宝APP_files/s3-b2.jpg" alt="" width="240" height="429" class="s3b">
-						<img src="一元夺宝APP_files/s3-l.png" alt="" width="246" height="300" class="s3l">
-						<img src="一元夺宝APP_files/s3-r.png" alt="" width="148" height="149" class="s3r">
-						<div class="s3Tag"></div>
-						<img src="一元夺宝APP_files/s3-lphone.png" alt="" width="117" height="148" class="s3lphone">
-						<img src="一元夺宝APP_files/s3-light.png" alt="" width="237" height="237" class="s3Light">
-						<i class="s3i bg2 s3-1"></i>
-						<i class="s3i bg2 s3-2"></i>
-						<i class="s3i bg2 s3-3"></i>
-						<i class="s3i bg2 s3-4"></i>
-						<i class="s3i bg2 s3-5"></i>
-						<i class="s3i bg2 s3-6"></i>
-						<i class="s3i bg2 s3-7"></i>
-						<i class="s3i bg2 s3-8"></i>
-						<i class="s3i bg2 s3-9"></i>
-						<i class="s3i bg2 s3-10"></i>
-						<i class="s3i bg2 s3-11"></i>
-						<i class="s3i bg2 s3-12"></i>
-						<i class="s3i bg2 s3-13"></i>
+						<i class="s3-phone"></i>
+						<i class="s3-finger"></i>
 					</div>
 				</div>
 				<div class="g-top"></div>
 			</div>
-
+			
+            <!--第四个页面-->
 			<div class="section s4">
-				<div class="g-wrap">
-
-					<img src="一元夺宝APP_files/s4-time-t.jpg" alt="" width="495" height="246" class="s4TimeT">
-					<img src="一元夺宝APP_files/s4-time-b.jpg" alt="" width="495" height="148" class="s4TimeB">
-					<i class="bg2 s4B"></i>
-					<i class="bg2 s4F"></i>
-					<i class="bg2 s4Q1"></i>
-					<i class="bg2 s4Q2"></i>
-					<div class="s4-wrap g-clear">
-						<span>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-            </span>
-						<span>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-            </span>
-						<span>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-            </span>
-						<span>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-            </span>
-						<span class="s4-wrap1">
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-            </span>
-						<span class="s4-wrap2">
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-            </span>
-						<span class="s4-wrap3">
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-            </span>
-						<span class="s4-wrap4">
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-                <i class="s4i bg2 s4-0"></i>
-                <i class="s4i bg2 s4-1"></i>
-                <i class="s4i bg2 s4-2"></i>
-                <i class="s4i bg2 s4-3"></i>
-                <i class="s4i bg2 s4-4"></i>
-                <i class="s4i bg2 s4-5"></i>
-                <i class="s4i bg2 s4-6"></i>
-                <i class="s4i bg2 s4-7"></i>
-                <i class="s4i bg2 s4-8"></i>
-                <i class="s4i bg2 s4-9"></i>
-            </span>
-					</div>
-					<i class="bg2 p2"></i>
-					<i class="bg2 p3"></i>
-
-					<i class="bg2 p1"></i>
-					<i class="bg2 p3 p3-2"></i>
-					<i class="bg2 p2 p2-2"></i>
-
-					<i class="bg2 p3 p3-3"></i>
+				<div class="g-wrap s4-b">
+					<i class="s4-phone"></i>
+					<i class="s4B-hat"></i>
+					<i class="s4B-stars-y"></i>
+					<i class="s4B-stars-b"></i>
+					<i class="s4B-stars-r"></i>
 				</div>
-				<div class="g-top"></div>
-			</div>
-
-			<div class="section s5">
-				<div class="g-wrap">
-
-					<img src="一元夺宝APP_files/s5-phone2.jpg" alt="" width="393" height="800" class="s5Phone">
-
-					<img src="一元夺宝APP_files/s5-dt.png" alt="" width="484" height="92" class="s5Dt">
-					<!--<img src="http://mimg.127.net/hd/all2/150526_duobaojieshao/1507160910/img/s5-d.png" alt="" width="236" height="117" class="s5D"/>-->
-					<img src="一元夺宝APP_files/s5-d-1.png" alt="" width="128" height="117" class="s5D">
-					<img src="一元夺宝APP_files/s5-d-2.png" alt="" width="128" height="117" class="s5D s5D2">
-					<img src="一元夺宝APP_files/s5-p.png" alt="" width="129" height="256" class="s5P">
-					<img src="一元夺宝APP_files/s5-wt.png" alt="" width="311" height="83" class="s5Wt">
-				</div>
-				<div class="s5-footer">
-					<p>
-						<a href="http://corp.163.com/index_gb.html" target="_blank"><span>关于网易</span></a><a href="http://mail.163.com/html/mail_intro/" target="_blank"><span>关于网易免费邮</span></a><a href="http://mail.163.com/dashi/activity/join.html" target="_blank"><span>邮箱大师活动</span></a>
-						<a
-							href="http://corp.163.com/gb/legal/legal.html" target="_blank"><span>隐私政策</span></a><a href="http://help.mail.163.com/"><span>联系我们</span></a><span>|</span><span>网易公司版权所有©1997-<script type="text/javascript" src="一元夺宝APP_files/year.js"></script>2016</span>
-					</p>
-				</div>
-				<div class="g-top"></div>
+				<div class="g-top"></div> 
 			</div>
 		</div>
+		
 		<script>
 			(function() {
 				var eDiv = document.createElement("div"),
