--- a/web-animate/web-moneyandcard.html
+++ b/web-animate/web-moneyandcard.html
@@ -19,23 +19,22 @@
 	</head>
 
 	<body>
-              <!--页面的字体，暂时引用网易。-->    
+		<!--页面的字体，暂时引用网易。-->
 		<div class="g-part">
 			<div class="g-part-wrap">
-				<p class="g-part-title g-part-title1" style="display: block;"><em>1</em><span class="g-part-title-b">元商品</span><span class="g-part-title-c">任意挑选</span></p>
-
-				<p class="g-part-title g-part-title2"><em>1</em>元拿下<span>尽在掌握</span></p>
-
-				<p class="g-part-title g-part-title3"><em>1</em>看就懂<span>简单明了</span></p>
-
-				<p class="g-part-title g-part-title4"><em>1</em>触即发<span>刻不容缓</span></p>
-
-				<p class="g-part-title g-part-title5"><span>立即开启</span><em>1</em>元夺宝</p>
+				<p class="g-part-title g-part-title1" style="display: block;"><em>1</em><span class="g-part-title-b">击夺取</span><span class="g-part-title-c">礼券归你</span></p>
+				<i class="g-part-des1">简单易懂 操作快捷</i>
+				<p class="g-part-title g-part-title2"><em>1</em>券支付<span>购得商品</span></p>
+				<i class="g-part-des2">最新最好 等你选购</i>
+				<p class="g-part-title g-part-title3"><em>1</em>键分享<span>世界与你</span></p>
+				<i class="g-part-des3">专属于你的乐趣</i>
+				<p class="g-part-title g-part-title4"><span>马上参与</span><em>1</em>元夺券</p>
+				<i class="g-part-des4">万千商品 就在等你<br/>下载扑多app 与朋友共享快乐</i>
 			</div>
 		</div>
-	    
-	    <!--二维码-->
-	    <div class="g-part">
+
+		<!--二维码-->
+		<div class="g-part">
 			<div class="g-part-bottom">
 				<i class="g-part-qr"></i>
 			</div>
@@ -51,26 +50,29 @@
 				</div>
 			</div>
 		</div>
+
 		
-		<!--第一个页面-->
-		<div class="section s1">
-			<div class="g-wrap">
-				<img src="img/p1-phone.png" alt="" width="307" height="620" class="s1-phone"/>
-				<i class="s1-zs"></i>
-				<i class="s1-kh"></i>
-				<i class="s1-finger"></i>		
-			</div>
-		</div>
+
+		<!--第二个到第四个页面-->
 		
-		<!--第二个到第五个页面-->
 		<div id="wrap">
-			<!--第二个页面-->
+			<!--第一个页面-->
+			<div class="section s1">
+				<div class="g-wrap">
+					<img src="img/p1-phone.png" alt="" width="307" height="620" class="s1-phone" />
+					<i class="s1-zs"></i>
+					<i class="s1-kh"></i>
+					<i class="s1-finger"></i>
+				</div>
+			</div>
+			
+		<!--第二个页面-->
 			<div class="section s2">
 				<div style="overflow: hidden;height: 775px;position:relative;">
 					<div class="g-wrap">
-						<img src="img/p2-phone.png" alt="" class="s2-phone"/>
+						<img src="img/p2-phone.png" alt="" class="s2-phone" />
 						<i class="s2Card"></i>
-						<i class="s2Car"></i>					
+						<i class="s2Car"></i>
 						<i class="s2Phone"></i>
 						<i class="s2Ipad"></i>
 						<i class="s2-camera"></i>
@@ -91,8 +93,8 @@
 				</div>
 				<div class="g-top"></div>
 			</div>
-			
-            <!--第四个页面-->
+
+			<!--第四个页面-->
 			<div class="section s4">
 				<div class="g-wrap s4-b">
 					<i class="s4-phone"></i>
@@ -101,10 +103,16 @@
 					<i class="s4B-stars-b"></i>
 					<i class="s4B-stars-r"></i>
 				</div>
-				<div class="g-top"></div> 
+				<div class="s5-footer">
+					<p>
+						<span>深圳市好幸福网络科技有限公司  <i class="icon iconfont">&#xe660;</i>016 粤ICP备16032289号 &nbsp;<a href="http://www.miitbeian.gov.cn/icp/publish/query/icpMemoInfo_showPage.action#">
+						<i class="icon iconfont">&#xe694;</i></a></span>
+					</p>
+				</div>
+				<div class="g-top"></div>
 			</div>
 		</div>
-		
+
 		<script>
 			(function() {
 				var eDiv = document.createElement("div"),
